Update GravesX to 4.9.9.2 API
Cleans out deprecated methods in GravesX in favor of alternatives